crates/rattler_config/src/snapshots/rattler_config__tests__basic_config_edit.snap
---
source: crates/rattler_config/src/lib.rs
expression: toml_output
---
default-channels = [
    "conda-forge",
    "bioconda",
    "pytorch",
]
authentication-override-file = "/home/user/.rattler-auth"
tls-no-verify = true
array_field = []

[mirrors]
"https://conda.anaconda.org/" = [
    "https://mirror1.com/",
    "https://mirror2.com/",
]

[concurrency]
solves = 12
downloads = 24
builds = 1

[nested]
