crates/rattler_config/src/snapshots/rattler_config__tests__config_save_roundtrip.snap
---
source: crates/rattler_config/src/lib.rs
expression: saved_content
---
default-channels = [
    "conda-forge",
    "pytorch",
    "nvidia",
]
array_field = []

[concurrency]
solves = 6
downloads = 50
builds = 1

[s3-options.test-bucket]
endpoint-url = "https://s3.amazonaws.com/"
region = "us-east-1"
force-path-style = false

[nested]
